--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,13 +7,25 @@
         android:layout_height="match_parent"
         tools:context="cat.dev.messages.MainActivity">
 
-    <TextView
-            android:id="@+id/status"
+    <LinearLayout
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
+            android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+                android:id="@+id/ip_address"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+
+        <TextView
+                android:id="@+id/status"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"/>
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
